--- a/renderer/styles/containers/_all.sass
+++ b/renderer/styles/containers/_all.sass
@@ -1,4 +1,2 @@
-@import 'comment-container'
-@import 'filters-container'
-@import 'new-asset-container'
 @import 'node-properties'
+@import 'toolbar'
